# insightmedics

./: .env  .env.example  .gitignore  .prettierignore  README.md  bunfig.toml  eslint.config.js  package.json  vite.config.ts
.github/workflows/: ci.yml
.lovable/: plan.md
backend/: .coverage  .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  db.py  main.py  models.py  schemas.py
backend/app/pipeline/: cleaning.py  docs_extract.py  ingest.py  issues.py  llm1.py  llm2.py  llm_client.py  profile.py  report_docx.py  report_xlsx.py  rules_engine.py  runner.py  score.py  score_engine.py
backend/app/prompts/: llm1_system.md  llm2_system.md
backend/app/routers/: audits.py  leads.py
backend/scripts/: calibrate_hamza.py
backend/tests/: requirements-dev.txt  test_cleaning.py  test_issues.py  test_llm2.py  test_llm_client.py  test_pipeline.py  test_report_docx.py  test_report_xlsx.py  test_rules_engine.py  test_score_engine.py
src/: routeTree.gen.ts  styles.css
src/components/audit/: ResultCards.tsx
src/components/contact/: FormControls.tsx
src/components/home/: HomeSections.tsx
src/components/site/: FinalCTA.tsx  Footer.tsx  Header.tsx  LangToggle.tsx  Logo.tsx  OfferCard.tsx  PageHero.tsx  Section.tsx  SiteLayout.tsx
src/lib/: anti-spam.ts  content.ts  i18n.tsx  offers.ts  site-config.ts
src/lib/api/: client.ts  types.ts
src/lib/audit/: thresholds.ts
src/routes/: __root.tsx  admin.index.tsx  admin.leads.$id.tsx  admin.leads.tsx  admin.tsx  audit.tsx  cgv.tsx  confidentialite.tsx  contact.tsx  index.tsx  mentions-legales.tsx  methode.tsx  services.tsx  tarifs.tsx
supabase/: config.toml
